# gp-mpc-rocket-landing

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
config/: gp_params.yaml  mpc_params.yaml  rocket_params.yaml  safety_params.yaml
notebooks/: 01_dynamics_exploration.ipynb
scripts/: demo_mpc_tracking.py  run_experiments.py  run_gp_mpc_comparison.py
src/: __init__.py
src/dynamics/: __init__.py  discretization.py  linearization.py  rocket_3dof.py  rocket_6dof.py
src/experiments/: __init__.py  ablation.py  analysis.py  baselines.py  dispersion.py  monte_carlo.py  visualization.py
src/gp/: __init__.py  exact_gp.py  fast_gp.py  features.py  kernels.py  online_update.py  sparse_gp.py  structured_gp.py
src/learning/: __init__.py  data_manager.py  hyperparameter_tuner.py  novelty_selector.py  online_learner.py
src/lmpc/: __init__.py  lmpc.py
src/mpc/: __init__.py  constraints.py  cost_functions.py  gp_mpc.py  nominal_mpc.py  osqp_rti.py  rti_mpc.py  uncertainty_prop.py
src/reference/: scvx_interface.py  trajectory_library.py
src/safety/: __init__.py  backup_controller.py  invariant_sets.py  safety_filter.py  tube_mpc.py
src/terminal/: __init__.py  convex_hull.py  local_safe_set.py  memory_safe_set.py  q_function.py  safe_set.py
src/utils/: __init__.py  profiler.py
